# kp-mlir-sigi-mlir

./: .gitignore  CMakeLists.txt  README.md  justfile
include/: CMakeLists.txt
include/sigi-mlir/Dialect/Closure/: CMakeLists.txt
include/sigi-mlir/Dialect/Closure/IR/: CMakeLists.txt  ClosureAttributes.h  ClosureAttributes.td  ClosureBase.h  ClosureBase.td  ClosureDialect.h  ClosureOps.h  ClosureOps.td  ClosureTypes.h  ClosureTypes.td
include/sigi-mlir/Dialect/Closure/Transforms/: ClosureConversionUtil.h
include/sigi-mlir/Dialect/Sigi/: CMakeLists.txt
include/sigi-mlir/Dialect/Sigi/IR/: CMakeLists.txt  SigiAttributes.h  SigiAttributes.td  SigiBase.h  SigiBase.td  SigiDialect.h  SigiOps.h  SigiOps.td  SigiTypes.h  SigiTypes.td
include/sigi-mlir/Dialect/Sigi/Transforms/: SigiConversionUtil.h
lib/Conversion/: CMakeLists.txt  PassDetails.h
lib/Dialect/: CMakeLists.txt
runtime/: CMakeLists.txt  closure.c  closure.h  sigi.c  sigi.h
sandbox/: runtimeTest.c
sandbox/ClosureToLLVM/: convert-to-llvm.mlir  convert-to-llvm.mlir.ll  convert-to-llvm.mlir.llvm.mlir  convert-to-llvm.mlir.opt.ll  convert-to-llvm.mlir.opt.s  convert-to-llvm.mlir.s
sandbox/SigiToLLVM/: fibToLLVM.mlir  fibToLLVM.mlir.ll  fibToLLVM.mlir.llvm.mlir  fibToLLVM.mlir.s
sandbox/captureRec/: captureRec.ll  captureRec.llvm.mlir  captureRec.mlir  captureRec.s
sandbox/closureInlining/: closureInlining.mlir
sandbox/fibsimple/: fib.ll  fib.llvm.mlir  fib.mlir  fib.s  (+1 more)
test/: CMakeLists.txt  lit.cfg.py
tools/: CMakeLists.txt
tools/sigi-lsp-server/: CMakeLists.txt  sigi-lsp-server.cpp
(+42 files in other folders)
