################################################################################
# ClosureIncGen
#
# MLIR Closure dialect generated includes.
################################################################################

add_custom_target(ClosureIncGen)

# Attributes, Dialect, Operations and Types.
add_subdirectory(IR)
