################################################################################
# SigiIncGen
#
# MLIR Sigi dialect generated includes.
################################################################################

add_custom_target(SigiIncGen)

# Attributes, Dialect, Operations and Types.
add_subdirectory(IR)
